--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "fitbit": {
     "appUUID": "a845c4b2-e667-4b8e-ab7a-82375eafd0b3",
     "appType": "app",
-    "appDisplayName": "Water Logged",
+    "appDisplayName": "Weight+1",
     "iconFile": "resources/icon.png",
     "wipeColor": "#607d8b",
     "requestedPermissions": [
@@ -14,7 +14,7 @@
     ],
     "i18n": {
       "en": {
-        "name": "Weight-Logged"
+        "name": "Weight+1"
       }
     }
   },
